# rope_long_context_evaluation_suite

./: .gitignore  .gitmodules  Dockerfile  FINAL_COMPREHENSIVE_RESULTS.md  FINAL_RESULTS.md  HYPERPARAMETER_SWEEP.md  INSTALL.md  INSTALLATION.md  INSTALL_SIMPLE.md  OFFICIAL_BENCHMARKS.md  README.md  USAGE_GUIDE.md  comprehensive_config.yaml  comprehensive_config_fixed.yaml  comprehensive_sweep_visualizer.py  create_comprehensive_benchmark_demo.py  demo_benchmark_comparison.py  demo_results.json  demo_sweep.py  environment.yml  install_direct.sh  pyproject.toml  requirements_benchmarks.txt  run_comprehensive.py  run_comprehensive_evaluation.py  run_comprehensive_sweep.py  run_evaluation.py  run_focused_benchmark_evaluation.py  run_llama32_evaluation.py  run_llama32_lightweight.py  run_mistral.py  setup_benchmarks.sh  setup_comprehensive_evaluation.sh  setup_simple.sh  test_all_benchmarks.py  test_comprehensive_config.py  test_gpt2.yaml  test_llama31_1b.yaml  test_llama32_1b.yaml  test_llama32_quick.py  (+11 more)
comprehensive_benchmark_results/: BENCHMARK_DEMO_REPORT_20250820_161354.md  LONGBENCH_INTEGRATION_GUIDE.md  comprehensive_demo_results_20250820_161952.json  comprehensive_demo_results_20250820_162009.json
config/: default.yaml
examples/: quick_start.py  run_sweep_example.py
examples/configs/: comprehensive_evaluation.yaml  llama3_evaluation.yaml  yarn_evaluation.yaml
examples/sweep_configs/: all_methods_sweep.yaml  comprehensive_rope_sweep.yaml  extreme_length_sweep.yaml  quick_comparison_sweep.yaml  random_search_sweep.yaml  yarn_focused_sweep.yaml
llama32_comprehensive_results/: LLAMA32_EVALUATION_REPORT.md  LLAMA32_EVALUATION_REPORT_20250820_160038.md  dynamic_ntk_llama32_results.json  linear_interpolation_llama32_results.json  llama32_comprehensive_results_20250820_160038.json  llama3_llama32_results.json  longrope_llama32_results.json  ntk_aware_llama32_results.json  yarn_llama32_results.json
quick_sweep_results/comprehensive_sweep_20250821_012338/: sweep_summary.json
quick_sweep_results/comprehensive_sweep_20250821_012531/: sweep_summary.json
quick_sweep_results/comprehensive_sweep_20250821_013422/: sweep_summary.json
quick_sweep_results/comprehensive_sweep_20250821_013422/none_ctx2048_niah/: results_20250821_013557.json  summary_20250821_013557.json
quick_sweep_results/comprehensive_sweep_20250821_013800/: sweep_summary.json
quick_sweep_results/comprehensive_sweep_20250821_013800/none_ctx2048_niah/: results_20250821_014011.json  summary_20250821_014011.json
quick_sweep_results/comprehensive_sweep_20250821_014109/: sweep_summary.json
quick_sweep_results/comprehensive_sweep_20250821_014109/linear_ctx2048_niah/: results_20250821_014741.json  summary_20250821_014741.json
quick_sweep_results/comprehensive_sweep_20250821_014109/none_ctx2048_niah/: results_20250821_014323.json
quick_sweep_results/comprehensive_sweep_20250821_014109/none_ctx4096_niah/: results_20250821_014502.json  summary_20250821_014502.json
scripts/: README.md  run_comprehensive_benchmark_evaluation.py  run_llama31.py  run_longbench_evaluation.py  run_test.py  run_tinyllama.py  run_tinyllama_sweep.py  setup_data.py
scripts/analysis/: analyze_comprehensive_benchmark_results.py  analyze_comprehensive_results.py  analyze_llama32_results.py
scripts/demos/: add_longbench_demo.py  create_sample_visualizations.py  describe_visualizations.py
scripts/validation/: test_models.py  validate_all_methods.py  validate_imports.py  validate_llama3.py
src/rope_long_context_evaluation_suite/: __init__.py  cli.py  core.py  sweep_cli.py  utils.py
src/rope_long_context_evaluation_suite/benchmarks/: __init__.py  base.py  longbench.py  longbench_official.py  longbench_v2.py  niah.py  niah_official.py  ruler.py  ruler_official.py
src/rope_long_context_evaluation_suite/metrics/: __init__.py  (+4 more)
sweep_configs/: full_sweep.yaml  quick_test_sweep.yaml
test_configs/: longbench_offline_test.yaml  longbench_test.yaml  longbench_v2_test.yaml  niah_llm_judge_test.yaml  niah_test.yaml  ruler_test.yaml
test_env/: pyvenv.cfg
tests/: test_llama3.py  test_models.py  test_models_new.py  test_sweep_config.py
tinyllama_comprehensive_results/: COMPREHENSIVE_REPORT_20250820_154136.md  comprehensive_results_20250820_154136.json  detailed_statistics.txt  dynamic_ntk_results.json  linear_interpolation_results.json  llama3_results.json  longrope_results.json  ntk_aware_results.json  yarn_results.json
(+29 files in other folders)
